--- a/Views/Shared/_aside.cshtml
+++ b/Views/Shared/_aside.cshtml
@@ -92,7 +92,7 @@
                 <li class="" data-filter-tags="Inicio Portal Propiedad Intelectual">
                     <a href="~/PI/Index" title="Usuarios" data-filter-tags="Inicio Portal Propiedad Intelectual">
                         <i class='fa fa-home'></i>
-                        <span class="nav-link-text" data-i18n="Inicio Portal Propiedad Intelectual">Propiedad Intelectual</span>
+                        <span class="nav-link-text" data-i18n="Inicio Portal Propiedad Intelectual">Inicio</span>
                     </a>
                 </li>
                 if (accesos.pi_catalogos)
@@ -194,9 +194,9 @@
                 {
 
                     <li class="">
-                        <a href="#" title="Propiedad Industrial" data-filter-tags="Propiedad Industrial">
+                        <a href="#" title="Propiedad Industrial" data-filter-tags="Formatos Propiedad Industrial">
                             <i class='fa fa-list'></i>
-                            <span class="nav-link-text" data-i18n="Propiedad Industrial">Propiedad Industrial</span>
+                            <span class="nav-link-text" data-i18n="Formatos Propiedad Industrial">Formatos P. Industrial</span>
                         </a>
                         <ul>
 
@@ -255,9 +255,9 @@
                 {
 
                     <li class="">
-                        <a href="#" title="Propiedad Intelectual" data-filter-tags="Propiedad Intelectual">
+                        <a href="#" title="Propiedad Intelectual" data-filter-tags="Formatos Propiedad Intelectual">
                             <i class='fa fa-list'></i>
-                            <span class="nav-link-text" data-i18n="Propiedad Intelectual">Propiedad Intelectual</span>
+                            <span class="nav-link-text" data-i18n="Formatos Propiedad Intelectual">Formatos P. Intelectual</span>
                         </a>
                         <ul>
                             @if (accesos.pi_Obra)
@@ -302,7 +302,7 @@
                     <li class="" data-filter-tags="RegistroMarcas">
                         <a href="~/PI/RegistroMarcas" title="RegistroMarcas" data-filter-tags="RegistroMarcas">
                             <i class='fa fa-file-alt'></i>
-                            <span class="nav-link-text" data-i18n="Branch 1">Registro Marcas</span>
+                            <span class="nav-link-text" data-i18n="Branch 1">Propiedad Industrial e Intelectual</span>
                         </a>
                     </li>
                 }
