--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -142,21 +142,20 @@
                                                 @*<option value="0" tipo="0" pais="0" empresa="0" usuario="" selected>Solicitud</option>*@
                                                 <option value="0" tipo="0" pais="0" empresa="0" usuario="" selected>Seleccione una opción</option>
                                                 @*@foreach (Solicitud item in ViewBag.solicitud)
-        {
-            <option value="@item.id" tipo="@item.tipo" pais="@item.pais" empresa="@item.empresa" usuario="@item.usuario">@(item.tipo + " " + item.nombre)</option>
-        }
+                    {
+                        <option value="@item.id" tipo="@item.tipo" pais="@item.pais" empresa="@item.empresa" usuario="@item.usuario">@(item.tipo + " " + item.nombre)</option>
+                    }
                                                 *@
                                             </select>
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_022_c">
-                                            <label>Descripción corta</label>
+                                            @*<label>Descripción corta</label>*@
+                                            <label>Nombre</label>
                                             <input type="text" class="form-control input-sm" id="uu_022" autocomplete="off" />
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_00_c">
                                             <label for="uu_00">Empresa propietaria</label>
@@ -170,6 +169,8 @@
                                             </select>
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_01_c">
                                             <label for="uu_01">Antigua empresa propietaria</label>
@@ -189,8 +190,6 @@
                                             <input type="text" class="form-control input-sm" id="uu_03" autocomplete="off" />
                                         </div>
                                     </div>
-                                </div>
-                                <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_04_c">
                                             <label>Fecha legal</label>
@@ -203,33 +202,22 @@
                                             <input type="text" class="form-control input-sm" id="uu_05" autocomplete="off" readonly />
                                         </div>
                                     </div>
+                                </div>
+                                <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_06_c">
-                                            <label>Fecha de concesión</label>
+                                            <label id="uu_06_l">Fecha de concesión</label>
                                             <input type="text" class="form-control input-sm" id="uu_06" autocomplete="off" readonly />
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_07_c">
+                                    <div class="col-md-3" id="uu_07_c">
+                                        <div class="form-group">
                                             <label for="uu_07">Clase</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_07" autocomplete="off" style="width: 100%;">
                                                 @*<option value="0" selected>Clase</option>*@
                                                 <option value="0" selected>Seleccione una opción</option>
                                                 @foreach (Clase item in ViewBag.clase)
-                                                {
-                                                    <option value="@item.id">@item.nombre</option>
-                                                }
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-md-3">
-                                        <div class="form-group" id="uu_08_c">
-                                            <label for="uu_08">Tipo de registro</label>
-                                            <select class="select2 form-control input-sm custom-select" id="uu_08" autocomplete="off" style="width: 100%;">
-                                                @*<option value="0" selected>Tipo de registro</option>*@
-                                                <option value="0" selected>Seleccione una opción</option>
-                                                @foreach (TipoRegistro item in ViewBag.tipo_registro)
                                                 {
                                                     <option value="@item.id">@item.nombre</option>
                                                 }
@@ -249,7 +237,6 @@
                                             </select>
                                         </div>
                                     </div>
-
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_10_c">
                                             <label for="uu_10">Estatus</label>
@@ -261,6 +248,45 @@
                                                     <option value="@item.id">@item.nombre</option>
                                                 }
                                             </select>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-md-3">
+                                        <div class="form-group" id="uu_08_c">
+                                            <label for="uu_08">Tipo de registro</label>
+                                            <select class="select2 form-control input-sm custom-select" id="uu_08" autocomplete="off" style="width: 100%;">
+                                                @*<option value="0" selected>Tipo de registro</option>*@
+                                                <option value="0" selected>Seleccione una opción</option>
+                                                @foreach (TipoRegistro item in ViewBag.tipo_registro)
+                                                {
+                                                    <option value="@item.id">@item.nombre</option>
+                                                }
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group" id="uu_34_c">
+                                            <label for="uu_34">Tipo de pago</label>
+                                            <select class="select2 form-control input-sm custom-select" id="uu_34" autocomplete="off" style="width: 100%;">
+                                                <option value="0" selected>Seleccione una opción</option>
+                                                @foreach (TipoRegistro item in ViewBag.tipo_registro)
+                                                {
+                                                    <option value="@item.id">@item.nombre</option>
+                                                }
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group" id="uu_35_c">
+                                            <label>Prioridad</label>
+                                            <input type="text" class="form-control input-sm" id="uu_35" autocomplete="off" />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group" id="uu_36_c">
+                                            <label>Fecha de vencimiento de prioridad</label>
+                                            <input type="text" class="form-control input-sm" id="uu_36" autocomplete="off" readonly />
                                         </div>
                                     </div>
                                 </div>
@@ -474,21 +500,27 @@
                                             <label>Requerimiento del negocio</label>
                                             <input type="text" class="form-control input-sm" id="uu_21" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_210_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_210" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_22_c">
                                             <label>Instrucciones al correponsal</label>
                                             <input type="text" class="form-control input-sm" id="uu_22" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_220_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_220" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_23_c">
                                             <label>
@@ -496,11 +528,14 @@
                                             </label>
                                             <input type="text" class="form-control input-sm" id="uu_23" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_230_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_230" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_24_c">
                                             <label>
@@ -508,11 +543,14 @@
                                             </label>
                                             <input type="text" class="form-control input-sm" id="uu_24" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_240_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_240" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_25_c">
                                             <label>
@@ -520,11 +558,14 @@
                                             </label>
                                             <input type="text" class="form-control input-sm" id="uu_25" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_250_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_250" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_26_c">
                                             <label>
@@ -532,11 +573,14 @@
                                             </label>
                                             <input type="text" class="form-control input-sm" id="uu_26" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_260_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_260" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_27_c">
                                             <label>
@@ -544,11 +588,14 @@
                                             </label>
                                             <input type="text" class="form-control input-sm" id="uu_27" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_270_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_270" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_28_c">
                                             <label>
@@ -556,6 +603,8 @@
                                             </label>
                                             <input type="text" class="form-control input-sm" id="uu_28" autocomplete="off" readonly />
                                         </div>
+                                    </div>
+                                    <div class="col-md-3">
                                         <div class="form-group" id="uu_280_c">
                                             <label>Completo</label>
                                             <input type="text" class="form-control input-sm" id="uu_280" autocomplete="off" readonly />
@@ -747,6 +796,7 @@
                     </section>
                     <br />
                     <section class="text-right">
+                        <button type="button" class="btn btn-default waves-effect waves-themed" onclick="window.location = '/PI/RegistroMarcas';" id="btnCancelar"><i class="fa fa-ban"></i> Cancelar</button>
                         <button type="button" class="btn btn-danger" onclick="Remover();" id="btnRemover" style="display:none;"><i class="fa fa-ban"></i> Remover</button>
                         <button type="button" class="btn btn-info" onclick="Guardar();" id="btnGuardar"><i class="fa fa-save"></i> Guardar</button>
                     </section>
