--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -98,7 +98,7 @@
                             {
                                 columns.AddFor(m => m.id).CellTemplate(@<text>
                                     <div>
-                                        <a type="button" class="dx-oc-link" href="<%- data.permalink %>"><i class="fa fa-eye"></i> Ver información</a>
+                                        <a type="button" class="dx-oc-link" href="<%- data.permalink %>"><i class="fa fa-eye"></i> Detalle</a>
                                     </div>
                                 </text>).Caption("ACCIONES").Width(150);
                                 columns.AddFor(m => m.nombre).CellTemplate(@<text>
