--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -728,6 +728,8 @@
                                                 <label>Solicita a la empresa instrucciones para renovar</label>
                                                 <input type="text" class="form-control input-sm" id="uu_29" autocomplete="off" readonly />
                                             </div>
+                                        </div>
+                                        <div class="col-md-3">
                                             <div class="form-group" id="uu_290_c">
                                                 <label>Completo</label>
                                                 <input type="text" class="form-control input-sm" id="uu_290" autocomplete="off" readonly />
@@ -738,6 +740,8 @@
                                                 <label>Instrucciones al correponsal</label>
                                                 <input type="text" class="form-control input-sm" id="uu_30" autocomplete="off" readonly />
                                             </div>
+                                        </div>
+                                        <div class="col-md-3">
                                             <div class="form-group" id="uu_300_c">
                                                 <label>Completo</label>
                                                 <input type="text" class="form-control input-sm" id="uu_300" autocomplete="off" readonly />
@@ -750,6 +754,8 @@
                                                 </label>
                                                 <input type="text" class="form-control input-sm" id="uu_31" autocomplete="off" readonly />
                                             </div>
+                                        </div>
+                                        <div class="col-md-3">
                                             <div class="form-group" id="uu_310_c">
                                                 <label>Completo</label>
                                                 <input type="text" class="form-control input-sm" id="uu_310" autocomplete="off" readonly />
@@ -762,6 +768,8 @@
                                                 </label>
                                                 <input type="text" class="form-control input-sm" id="uu_32" autocomplete="off" readonly />
                                             </div>
+                                        </div>
+                                        <div class="col-md-3">
                                             <div class="form-group" id="uu_320_c">
                                                 <label>Completo</label>
                                                 <input type="text" class="form-control input-sm" id="uu_320" autocomplete="off" readonly />
