--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -100,7 +100,7 @@
                                     <div>
                                         <a type="button" class="dx-oc-link" href="<%- data.permalink %>" title="Detalle"><i class="fa fa-eye"></i> Detalle</a>
                                     </div>
-                                </text>).Caption("ACCIONES").Width(100);
+                                </text>).Caption("ACCIÓN").Width(110);
                                 columns.AddFor(m => m.nombre).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
                                     <div>
