ocultar tipo_registro

--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -245,7 +245,7 @@
                                         </div>
                                     </div>
 
-                                    <div class="col-md-3">
+                                    <div class="col-md-3" style="display:none;">
                                         <div class="form-group" id="uu_08_c">
                                             <label for="uu_08">Tipo de registro</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_08" autocomplete="off" style="width: 100%;">
@@ -295,8 +295,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                @*/////////////////////////////////////////////*@
-                                
                                 @*<div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="notificacion_tituloc">
