--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -124,7 +124,7 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_02_c">
-                                            <label for="uu_02">Tipo de solicitud</label>
+                                            <label for="uu_02">Tipo de solicitud *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_02" autocomplete="off" style="width: 100%;">
                                                 @*<option value="0" disabled selected>Seleccione una opción</option>*@
                                                 @foreach (TipoSolicitud item in ViewBag.tipo_solicitud)
@@ -136,7 +136,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_021_c">
-                                            <label for="uu_021">Solicitud</label>
+                                            <label for="uu_021">Solicitud *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_021" autocomplete="off" style="width: 100%;">
                                                 <option value="0" tipo="0" pais="0" empresa="0" usuario="" disabled selected>Seleccione una opción</option>
                                                 @*<option value="@item.id" tipo="@item.tipo" pais="@item.pais" empresa="@item.empresa" usuario="@item.usuario">@(item.tipo + " " + item.nombre)</option>*@
@@ -159,7 +159,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_00_c">
-                                            <label for="uu_00">Empresa propietaria</label>
+                                            <label for="uu_00">Empresa propietaria *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_00" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (NegocioPI item in ViewBag.empresa)
@@ -172,7 +172,7 @@
 
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_01_c">
-                                            <label for="uu_01">Antigua empresa propietaria</label>
+                                            <label for="uu_01">Antigua empresa propietaria *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_01" autocomplete="off" style="width: 100%;">
                                                 @*<option value="0" selected>Antigua empresa propietaria</option>*@
                                                 <option value="0" disabled selected>Seleccione una opción</option>
@@ -185,7 +185,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_03_c">
-                                            <label>Número de registro</label>
+                                            <label>Número de registro *</label>
                                             <input type="text" class="form-control input-sm" id="uu_03" autocomplete="off" />
                                         </div>
                                     </div>
@@ -197,20 +197,20 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_05_c">
-                                            <label>Fecha de vencimiento</label>
+                                            <label>Fecha de vencimiento *</label>
                                             <input type="text" class="form-control input-sm" id="uu_05" autocomplete="off" readonly />
                                         </div>
                                     </div>
 
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_06_c">
-                                            <label id="uu_06_l">Fecha de concesión</label>
+                                            <label id="uu_06_l">Fecha de concesión *</label>
                                             <input type="text" class="form-control input-sm" id="uu_06" autocomplete="off" readonly />
                                         </div>
                                     </div>
                                     <div class="col-md-3" id="uu_07_a">
                                         <div class="form-group" id="uu_07_c">
-                                            <label for="uu_07">Clase</label>
+                                            <label for="uu_07">Clase *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_07" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (Clase item in ViewBag.clase)
@@ -222,7 +222,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_09_c">
-                                            <label for="uu_09">País</label>
+                                            <label for="uu_09">País *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_09" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (Pais item in ViewBag.pais)
@@ -234,7 +234,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_10_c">
-                                            <label for="uu_10">Estatus</label>
+                                            <label for="uu_10">Estatus *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_10" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (EstatusCatalogo item in ViewBag.estatus)
@@ -259,7 +259,7 @@
                                     </div>
                                     <div class="col-md-3" id="uu_34_a" style="display:none;">
                                         <div class="form-group" id="uu_34_c">
-                                            <label for="uu_34">Tipo de pago</label>
+                                            <label for="uu_34">Tipo de pago *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_34" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (TipoPago item in ViewBag.tipo_pago)
@@ -271,13 +271,13 @@
                                     </div>
                                     <div class="col-md-3" id="uu_35_a" style="display:none;">
                                         <div class="form-group" id="uu_35_c">
-                                            <label>Prioridad</label>
+                                            <label>Prioridad *</label>
                                             <input type="text" class="form-control input-sm" id="uu_35" autocomplete="off" />
                                         </div>
                                     </div>
                                     <div class="col-md-3" id="uu_36_a" style="display:none;">
                                         <div class="form-group" id="uu_36_c">
-                                            <label>Fecha de vencimiento de prioridad</label>
+                                            <label>Fecha de vencimiento de prioridad *</label>
                                             <input type="text" class="form-control input-sm" id="uu_36" autocomplete="off" readonly />
                                         </div>
                                     </div>
@@ -350,13 +350,13 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_11_c">
-                                            <label>Número de solicitud</label>
+                                            <label>Número de solicitud *</label>
                                             <input type="text" class="form-control input-sm" id="uu_11" autocomplete="off" />
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_12_c">
-                                            <label for="uu_12">Tipo de registro</label>
+                                            <label for="uu_12">Tipo de registro *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_12" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (TipoRegistro item in ViewBag.tipo_registro_solicitud)
@@ -368,7 +368,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_13_c">
-                                            <label for="uu_13">Persona que pidió el registro</label>
+                                            <label for="uu_13">Persona que pidió el registro *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_13" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (AspNetUsers item in ViewBag.usuarios)
@@ -380,7 +380,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_14_c">
-                                            <label for="uu_14">Despacho</label>
+                                            <label for="uu_14">Despacho *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_14" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (Despacho item in ViewBag.despacho)
@@ -393,7 +393,7 @@
 
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_15_c">
-                                            <label for="uu_15">Corresponsal</label>
+                                            <label for="uu_15">Corresponsal *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_15" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (Corresponsal item in ViewBag.corresponsal)
@@ -446,13 +446,13 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_16_c">
-                                            <label>Persona que solicitó la licencia</label>
+                                            <label>Persona que solicitó la licencia *</label>
                                             <input type="text" class="form-control input-sm" id="uu_16" autocomplete="off" />
                                         </div>
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_17_c">
-                                            <label for="uu_17">Licencia</label>
+                                            <label for="uu_17">Licencia *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_17" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (ConvenioLicencia item in ViewBag.licencia)
@@ -469,14 +469,14 @@
                                 <div class="row">
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_18_c">
-                                            <label>Persona que solicitó la cesión</label>
+                                            <label>Persona que solicitó la cesión *</label>
                                             <input type="text" class="form-control input-sm" id="uu_18" autocomplete="off" />
                                         </div>
                                     </div>
 
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_19_c">
-                                            <label for="uu_19">Cesión</label>
+                                            <label for="uu_19">Cesión *</label>
                                             <select class="select2 form-control input-sm custom-select" id="uu_19" autocomplete="off" style="width: 100%;">
                                                 <option value="0" disabled selected>Seleccione una opción</option>
                                                 @foreach (ContratoCesion item in ViewBag.cesion)
