--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -101,6 +101,7 @@
                                         <a type="button" class="dx-oc-link" href="<%- data.permalink %>" title="Detalle"><i class="fa fa-eye"></i> Detalle</a>
                                     </div>
                                 </text>).Caption("ACCIÓN").Width(110);
+                                columns.AddFor(m => m.solicitud_tipo_desc).Caption("Tipo de solicitud");
                                 columns.AddFor(m => m.nombre).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
                                     <div>
@@ -114,10 +115,10 @@
                                     </div>
                                     <% } %>
                                 </text>).Caption("Nombre");
-                                columns.AddFor(m => m.solicitud_tipo_desc).Caption("Tipo de solicitud");
                                 columns.AddFor(m => m.no_registro).Caption("No Registro");
                                 columns.AddFor(m => m.solicitud_desc).Caption("Solicitud");
                                 columns.AddFor(m => m.empresa_desc).Caption("Empresa Propietaria");
+                                columns.AddFor(m => m.estatus_desc).Caption("Estatus");
                                 columns.AddFor(m => m.fc).Caption("Fecha Ingreso").Format("dd/MM/yyyy");
                             })
                             .ColumnAutoWidth(true)
