--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -153,13 +153,13 @@
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_022_c">
                                             @*<label>Descripción corta</label>*@
-                                            <label>Nombre</label>
+                                            <label>Nombre *</label>
                                             <input type="text" class="form-control input-sm" id="uu_022" autocomplete="off" />
                                         </div>
                                     </div>
                                     <div class="col-md-3" id="uu_38_a" style="display:none;">
                                         <div class="form-group" id="uu_38_c">
-                                            <label>Autor</label>
+                                            <label>Autor *</label>
                                             <input type="text" class="form-control input-sm" id="uu_38" autocomplete="off" />
                                         </div>
                                     </div>
@@ -197,7 +197,7 @@
                                     </div>
                                     <div class="col-md-3">
                                         <div class="form-group" id="uu_04_c">
-                                            <label>Fecha legal</label>
+                                            <label>Fecha legal *</label>
                                             <input type="text" class="form-control input-sm" id="uu_04" autocomplete="off" readonly />
                                         </div>
                                     </div>
