--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -98,10 +98,10 @@
                             {
                                 columns.AddFor(m => m.id).CellTemplate(@<text>
                                     <div>
-                                        <a type="button" class="dx-oc-link" href="<%- data.permalink %>" title="Detalle"><i class="fa fa-eye"></i> Detalle</a>
+                                        <a type="button" class="dx-oc-link" href="<%- data.permalink %>" title="Detalle"><i class="fa fa-eye"></i> </a>
                                     </div>
                                 </text>).Caption("ACCIÓN").Width(110);
-                                columns.AddFor(m => m.solicitud_tipo_desc).Caption("Tipo de solicitud");
+                                columns.AddFor(m => m.solicitud_tipo_desc).Caption("TIPO DE SOLICITUD");
                                 columns.AddFor(m => m.nombre).CellTemplate(@<text>
                                     <% if (data.activo == false) { %>
                                     <div>
@@ -114,12 +114,12 @@
                                         <%- value %>
                                     </div>
                                     <% } %>
-                                </text>).Caption("Nombre");
-                                columns.AddFor(m => m.no_registro).Caption("No Registro");
-                                columns.AddFor(m => m.solicitud_desc).Caption("Solicitud");
-                                columns.AddFor(m => m.empresa_desc).Caption("Empresa Propietaria");
-                                columns.AddFor(m => m.estatus_desc).Caption("Estatus");
-                                columns.AddFor(m => m.fc).Caption("Fecha Ingreso").Format("dd/MM/yyyy");
+                                </text>).Caption("NOMBRE");
+                                columns.AddFor(m => m.no_registro).Caption("No REGISTRO");
+                                columns.AddFor(m => m.solicitud_desc).Caption("SOLICITUD");
+                                columns.AddFor(m => m.empresa_desc).Caption("EMPRESA PROPIETARIA");
+                                columns.AddFor(m => m.estatus_desc).Caption("ESTATUS");
+                                columns.AddFor(m => m.fc).Caption("FECHA REGISTRO").Format("dd/MM/yyyy");
                             })
                             .ColumnAutoWidth(true)
                             .SearchPanel(p => p.Visible(true).Placeholder("Buscar"))
