--- a/Views/PI/RegistroMarcas.cshtml
+++ b/Views/PI/RegistroMarcas.cshtml
@@ -119,7 +119,7 @@
                                 columns.AddFor(m => m.solicitud_desc).Caption("SOLICITUD");
                                 columns.AddFor(m => m.empresa_desc).Caption("EMPRESA PROPIETARIA");
                                 columns.AddFor(m => m.estatus_desc).Caption("ESTATUS");
-                                columns.AddFor(m => m.fc).Caption("FECHA REGISTRO").Format("dd/MM/yyyy");
+                                //columns.AddFor(m => m.fc).Caption("FECHA DE REGISTRO").Format("dd/MM/yyyy");
                             })
                             .ColumnAutoWidth(true)
                             .SearchPanel(p => p.Visible(true).Placeholder("Buscar"))
