--- a/Views/PI/RegistroMarca.cshtml
+++ b/Views/PI/RegistroMarca.cshtml
@@ -676,6 +676,21 @@
                                             <input type="text" class="form-control input-sm" id="uu_280" autocomplete="off" readonly />
                                         </div>
                                     </div>
+
+                                    <div class="col-md-3">
+                                        <div class="form-group" id="uu_40_c">
+                                            <label>
+                                                Declaración de uso
+                                            </label>
+                                            <input type="text" class="form-control input-sm" id="uu_40" autocomplete="off" readonly />
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <div class="form-group" id="uu_400_c">
+                                            <label>Completo</label>
+                                            <input type="text" class="form-control input-sm" id="uu_400" autocomplete="off" readonly />
+                                        </div>
+                                    </div>
                                 </div>
                             </div>@*tab05*@
 
